--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     </div>
     <header>This is header</header>
-    <footer>this is a footer</footer>
+    <div>this is a footer</div>
 </body>
 
 </html>
